# ingestao-empresas-solucao

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.go.yml  docker-compose.test.rust.yml  participante.json  requirements.txt
docs/: ARCHITECTURE.md  CHECKLIST_PR.md  GATES_E_RANKING.md  PRD.md  REGRAS_E_CONTRATO.md  STACK_E_LIMITES.md  test_consistency_report.md
go/: Dockerfile  go.mod  main.go
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
src/: dq_checks.py  main.py  pipeline.py  schema.py
tests/: smoke_test.py  test_consistency.py
