[package]
name = "ingestao-empresas"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
postgres = "0.19"
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
